Fix sidebar item vertical spacing

--- a/Libadwaita/styles/sidebar.less
+++ b/Libadwaita/styles/sidebar.less
@@ -79,8 +79,8 @@
 		font-weight: normal;
 		color: @text_color;
 		border-radius: @button_radius;
-		margin-top: 3px;
-		margin-bottom: 3px;
+		margin-top: 1px;
+		margin-bottom: 1px;
 		margin-right: 24px;
 		height: @button_height;
 		line-height: @button_height;
